--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,36 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="phoneCatalogApp">
 <head>
   <meta charset="utf-8">
   <title>My HTML File</title>
+
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <script src="bower_components/angular/angular.js"></script>
-</head>
-<body>
 
-<p>Nothing here {{'yet' + '!'}}</p>
+  <link rel="stylesheet" href="app.css" />
+    <script src="app.js"></script>
+
+</head>
+<body ng-controller="PhoneListController">
+
+    <p>Hello, {{name}}!</p>
+
+    <ul>
+        <li ng-repeat="phone in phones">
+            <span>{{phone.name}}</span>
+            <p>{{phone.snippet}}</p>
+        </li>
+    </ul>
+
+    <p>Total number of phones: {{phones.length}}</p>
+
+    <table>
+        <tr ng-repeat="i in [0,1,2,3,4,5,6,7]">
+            <td ng-repeat="j in [0,1,2,3,4,5,6,7]">
+                &nbsp;({{i+1}},{{j+1}})&nbsp;
+            </td>
+        </tr>
+    </table>
 
 </body>
 </html>
