--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
       <script src="bower_components/angular/angular.js"></script>
 
       <link rel="stylesheet" href="app.css" />
-        <script src="app.js"></script>
-        <script src="phone-list.component.js"></script>
+        <script src="app.module.js"></script>
+        <script src="phone-list/phone-list.module.js"></script>
+        <script src="phone-list/phone-list.component.js"></script>
 
     </head>
     <body>
