--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -24,10 +24,13 @@
 
     <div>
     <div>   The results are:</div>
-    <ul>
+    <ul class="phones">
         <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query
-                                | orderBy:$ctrl.orderProp">
-            <span>{{phone.name}}</span>
+                                | orderBy:$ctrl.orderProp" class="thumbnail">
+            <a href="#/phones/{{phone.id}}" class="thumb">
+                <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
+            </a>
+            <span><<a href="#/phones/{{phone.id}}">{{phone.name}}</a></span>
             <p>{{phone.snippet}}</p>
             </li>
         </ul>
