--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -30,7 +30,7 @@
             <a href="#/phones/{{phone.id}}" class="thumb">
                 <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
             </a>
-            <span><<a href="#/phones/{{phone.id}}">{{phone.name}}</a></span>
+            <span><a href="#/phones/{{phone.id}}">{{phone.name}}</a></span>
             <p>{{phone.snippet}}</p>
             </li>
         </ul>
