--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -1,5 +1,4 @@
 <div>
-
     <p>Hello, {{$ctrl.name}}!</p>
 
     <div>
@@ -27,10 +26,10 @@
     <ul class="phones">
         <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query
                                 | orderBy:$ctrl.orderProp" class="thumbnail">
-            <a href="#/phones/{{phone.id}}" class="thumb">
+            <a href="#!/phones/{{phone.id}}" class="thumb">
                 <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
             </a>
-            <span><a href="#/phones/{{phone.id}}">{{phone.name}}</a></span>
+            <span><a href="#!/phones/{{phone.id}}">{{phone.name}}</a></span>
             <p>{{phone.snippet}}</p>
             </li>
         </ul>
